# azure-aad-mfa-report-python

./: .gitignore  README.md  helpers.py  main.py  mypy.ini  pyproject.toml  requirements.txt
.github/workflows/: codeql-analysis.yml  dep-ci.yml
tests/: test_mfa_report.py
