[tool.poetry]
name = "mfa_report"
version = "0.1.0"
description = ""
authors = ["Jay W <40270505+JayDoubleu@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.7"
azure-common = "^1.1.27"
msrest = "^0.6.21"
msrestazure = "^0.6.4"
azure-cli-core = "^2.29.0"
aiohttp = "^3.7.4"
openpyxl = "^3.0.9"

[tool.poetry.dev-dependencies]
pytest = "^6.2"
flake8 = "^4.0.1"
flake8-bugbear = "^21.9.2"
mypy = "^0.910"
types-requests = "^2.25.11"
black = "^21.9b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
mfa_report = 'main:main'
fmt = "black:main"

[tool.pylint.format]
max-line-length = 88

[tool.pylint.message_control]
disable = ['logging-fstring-interpolation']
